--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Add track to top of playlist",
+    "name": "Spotify: Add track to top of playlist",
     "version": "1.0",
     "description": "When adding a track to a Spotify playlist, add the track to the top of the playlist instead of the bottom",
     "icons": {
