Simplify main page window access

--- a/manifest.json
+++ b/manifest.json
@@ -13,11 +13,9 @@
                 "https://open.spotify.com/*"
             ],
             "js": [
-                "inject.js"
-            ]
+                "content.js"
+            ],
+            "world": "MAIN"
         }
-    ],
-    "web_accessible_resources": [
-        "content.js"
     ]
 }
