--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,8 @@
     "manifest_version": 2,
     "name": "Spotify: Add track to top of playlist",
     "version": "1.0",
+    "author": "André Andersson",
+    "homepage_url": "https://github.com/Qluxzz/spotify-add-to-top-of-playlist",
     "description": "When adding a track to a Spotify playlist, add the track to the top of the playlist instead of the bottom",
     "icons": {
         "48": "icon.svg",
